--- a/idlerpg/index.html
+++ b/idlerpg/index.html
@@ -4,13 +4,13 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#343c49" />
-    <link rel="shortcut icon" type="image/ico" href="/src/assets/favicon.ico" />
+    <link rel="shortcut icon" type="image/ico" href="src/assets/favicon.ico" />
     <title>IdleRPG</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
 
-    <script src="/src/index.tsx" type="module"></script>
+    <script src="src/index.tsx" type="module"></script>
   </body>
 </html>
